Add some content

--- a/index.html
+++ b/index.html
@@ -8,16 +8,166 @@
     <link rel="icon" href="assets/images/devchallenges.png">
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/script.js" defer></script>
-    <title>Devchallenges Portfolio</title>
+    <title>devChallenges Portfolio</title>
 </head>
 
 <body>
     <header>
-        <h1>Devchallenges Portfolio</h1>
+        <h1>devChallenges Portfolio</h1>
     </header>
-    <main>
-        
 
+    <main>
+        <section>
+            <h2>About</h2>
+            <div class="card">
+                <div class="card__image"><img src="assets/images/avatar.png" alt="a smiling avatar"></div>
+                <div class="card__content">
+                    <h3>Jelena Jovicic</h3>
+                    <p>Front-End Developer</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                        eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe, voluptate
+                        facilis cupiditate tenetur rerum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                        eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe, voluptate
+                        facilis cupiditate tenetur rerum.</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <div class="container--grid">
+                <div class="card">
+                    <div class="card__image"><img src="assets/images/07-edie-homepage.png" alt=""></div>
+                    <div class="card__content">
+                        <h3>#7 Edie Homepage</h3>
+                        <p>Subtitle</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
+                            voluptate
+                            facilis cupiditate tenetur rerum.</p>
+                        <button class="btn">Live</button><button class="btn">Code</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__image"><img src="assets/images/06-checkout-page.png" alt=""></div>
+                    <div class="card__content">
+                        <h3>#6 Checkout Page</h3>
+                        <p>Subtitle</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
+                            voluptate
+                            facilis cupiditate tenetur rerum.</p>
+                        <button class="btn">Live</button><button class="btn">Code</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__image"><img src="assets/images/05-my-gallery.png" alt=""></div>
+                    <div class="card__content">
+                        <h3>#5 My Gallery</h3>
+                        <p>Subtitle</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
+                            voluptate
+                            facilis cupiditate tenetur rerum.</p>
+                        <button class="btn">Live</button><button class="btn">Code</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__image"><img src="assets/images/04-recipe-page.png" alt=""></div>
+                    <div class="card__content">
+                        <h3>#4 Recipe Page</h3>
+                        <p>Subtitle</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
+                            voluptate
+                            facilis cupiditate tenetur rerum.</p>
+                        <button class="btn">Live</button><button class="btn">Code</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__image"><img src="assets/images/03-interior-consultant.png" alt=""></div>
+                    <div class="card__content">
+                        <h3>#3 Interior Consultant</h3>
+                        <p>Subtitle</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
+                            voluptate
+                            facilis cupiditate tenetur rerum.</p>
+                        <button class="btn">Live</button><button class="btn">Code</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__image"><img src="assets/images/02-my-team-page.png" alt=""></div>
+                    <div class="card__content">
+                        <h3>#2 My Team Page</h3>
+                        <p>Subtitle</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
+                            voluptate
+                            facilis cupiditate tenetur rerum.</p>
+                        <button class="btn">Live</button><button class="btn">Code</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__image"><img src="assets/images/01-404.png" alt=""></div>
+                    <div class="card__content">
+                        <h3>#1 404 Page</h3>
+                        <p>Subtitle</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
+                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
+                            voluptate
+                            facilis cupiditate tenetur rerum.</p>
+                        <button class="btn">Live</button><button class="btn">Code</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Blog</h2>
+            <div class="container--grid">
+                <div class="card">
+                    <div class="card__image"></div>
+                    <div class="card__content"></div>
+                </div>
+                <div class="card">
+                    <div class="card__image"></div>
+                    <div class="card__content"></div>
+                </div>
+                <div class="card">
+                    <div class="card__image"></div>
+                    <div class="card__content"></div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Experience</h2>
+        </section>
+        <section>
+            <h2>Hobbies</h2>
+            <div class="container--grid">
+                <div class="card">
+                    <div class="card__image"></div>
+                    <div class="card__content"></div>
+                </div>
+                <div class="card">
+                    <div class="card__image"></div>
+                    <div class="card__content"></div>
+                </div>
+                <div class="card">
+                    <div class="card__image"></div>
+                    <div class="card__content"></div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
