--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/script.js" defer></script>
     <title>devChallenges Portfolio</title>
@@ -27,12 +28,24 @@
                             alt="a smiling avatar of a girl with pigtails and glasses, hypnotized" width="270px">
                     </div>
                     <div class="card__content">
-                        <h2>Jelena Jovičić</h2>
-                        <p>Front-End Developer</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi voluptas eveniet ipsam ut
-                            eligendi qui architecto possimus sint libero animi soluta quisquam error fugit saepe,
-                            voluptate
-                            facilis cupiditate tenetur rerum.</p>
+                        <div class="grid grid--flexible info">
+                            <div>
+                                <h2>Jelena Jovičić</h2>
+                                <p class="subtitle">Front-End Developer</p>
+                            </div>
+                            <div>
+                                <address><span class="material-icons">
+                                        email
+                                    </span>jejovicic@gmail.com</address>
+                                <address><span class="material-icons">
+                                    phone
+                                    </span>
+                                    (381) 234 567 89</address>
+                            </div>
+                        </div>
+                        <p>Self-motivated developer, who is willing to learn and create outstanding UI applications.</p>
+                        <p>Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada
+                            molestie.</p>
                     </div>
                 </div>
             </section>
