add skills and hobbies

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             alt="a smiling avatar of a girl with pigtails and glasses, hypnotized" width="270px">
                     </div>
                     <div class="card__content">
-                        <div class="grid grid--flexible info">
+                        <div class="grid grid--flexible grid--personal">
                             <div>
                                 <h2>Jelena Jovičić</h2>
                                 <p class="subtitle">Front-End Developer</p>
@@ -50,8 +50,8 @@
                 </div>
             </section>
             <section class="grid__item grid__item--single">
-                <h2>Front End</h2>
-                <p>Most used languages across my repos:</p>
+                <h2 style="text-transform: uppercase; font-weight: 700;">Front End</h2>
+                
                 <ul>
                     <li>HTML
                         <div class="skill-bar">
@@ -67,29 +67,30 @@
 
                     </li>
                 </ul>
+                <p>* Most used languages across my repos.</p>
             </section>
             <section class="grid__item grid__item--single">
                 <h2>Hobbies</h2>
                 <div class="grid">
                     <div class="card">
-                        <div class="card__image"><img src="assets/images/avatar.png" alt=""></div>
+                        <div class="card__image"><img src="assets/images/pexels-abdul-kayum-10845119.jpg" alt="close up of code on a screen"></div>
                         <div class="card__content">
-                            <h3>Cooking</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <h3>Coding</h3>
+                            <p>I hope it will become more than a hobby.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card__image"><img src="assets/images/avatar.png" alt=""></div>
+                        <div class="card__image"><img src="assets/images/pexels-samer-daboul-1627933.jpg" alt="close up photo of black coffee"></div>
                         <div class="card__content">
-                            <h3>Cooking</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <h3>Coffee</h3>
+                            <p>Black and strong.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card__image"><img src="assets/images/avatar.png" alt=""></div>
+                        <div class="card__image"><img src="assets/images/pexels-magda-ehlers-1319572.jpg" alt="plastic animals toys on wooden surface"></div>
                         <div class="card__content">
-                            <h3>Cooking</h3>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <h3>Playing</h3>
+                            <p>Lego, toy trains and all the things 5 year old boys love.</p>
                         </div>
                     </div>
                 </div>
