centered icons, update readme

--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
                 
                 <ul>
                     <li>HTML
-                        <div class="skill-bar">
+                        <div class="skill-bar"  title="39%">
                             <span id="html"></span>
                         </div>
                     </li>
                     <li>CSS
-                        <div class="skill-bar"><span id="css"></span></div>
+                        <div class="skill-bar" title="36%"><span id="css"></span></div>
 
                     </li>
                     <li>JavaScript
-                        <div class="skill-bar"><span id="javascript"></span></div>
+                        <div class="skill-bar" title="26%"><span id="javascript"></span></div>
 
                     </li>
                 </ul>
-                <p>* Most used languages across my repos.</p>
+                <p>* Most used languages across my repos, according to <a href="https://github.com/anuraghazra/github-readme-stats" target="_blank">github-readme-stats</a>.</p>
             </section>
             <section class="grid__item grid__item--single">
                 <h2>Hobbies</h2>
