--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <main>
         <div class="grid grid--flexible">
             <section id="personal" class="grid__item grid__item--full">
-                <div class="card">
-                    <div class="card__image"><img src="assets/images/avatar.png"
+                <div class="flex">
+                    <div class="flex__image"><img src="assets/images/avatar.png"
                             alt="a smiling avatar of a girl with pigtails and glasses, hypnotized" width="270px">
                     </div>
-                    <div class="card__content">
-                        <div class="grid grid--flexible grid--personal">
+                    <div class="flex__content">
+                        <div class="grid grid--flexible">
                             <div>
                                 <h2>Jelena Jovičić
                                     <span class="subtitle">Front-End Developer</span>
@@ -75,26 +75,26 @@
             <section id="hobbies" class="grid__item grid__item--single">
                 <h2>Hobbies</h2>
                 <div class="grid">
-                    <div class="card">
-                        <div class="card__image"><img src="assets/images/pexels-abdul-kayum-10845119.jpg"
+                    <div class="flex">
+                        <div class="flex__image"><img src="assets/images/pexels-abdul-kayum-10845119.jpg"
                                 alt="close up of code on a screen"></div>
-                        <div class="card__content">
+                        <div class="flex__content">
                             <h3>Coding</h3>
                             <p>I hope it will become more than a hobby.</p>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card__image"><img src="assets/images/pexels-samer-daboul-1627933.jpg"
+                    <div class="flex">
+                        <div class="flex__image"><img src="assets/images/pexels-samer-daboul-1627933.jpg"
                                 alt="close up photo of black coffee"></div>
-                        <div class="card__content">
+                        <div class="flex__content">
                             <h3>Coffee</h3>
                             <p>Black and strong.</p>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card__image"><img src="assets/images/pexels-magda-ehlers-1319572.jpg"
+                    <div class="flex">
+                        <div class="flex__image"><img src="assets/images/pexels-magda-ehlers-1319572.jpg"
                                 alt="plastic animals toys on wooden surface"></div>
-                        <div class="card__content">
+                        <div class="flex__content">
                             <h3>Playing</h3>
                             <p>Lego, toy trains and all the things 5 year old boys love.</p>
                         </div>
@@ -104,10 +104,10 @@
             <section id="blog" class="grid__item grid__item--double">
                 <h2 class="variant3">Blog</h2>
                 <div class="grid">
-                    <div class="card">
+                    <div class="flex">
 
-                        <div class="card__content">
-                            <h3 class="variant2">How to organize your CSS</h3>
+                        <div class="flex__content">
+                            <h3>How to organize your CSS</h3>
                             <p>In this article I tell the story about Proin eu justo sit amet lacus bibendum tincidunt.
                                 Vivamus non volutpat nisl, a luctus mi.</p>
                             <p>Donec aliquam est dui, vel vestibulum diam
@@ -115,16 +115,16 @@
                             </p>
                             <a href="">dev.to</a>
                         </div>
-                        <div class="card__image"></div>
+                        <div class="flex__image"></div>
                     </div>
                 </div>
             </section>
             <section id="experience" class="grid__item grid__item--double">
                 <h2 class="variant2">Experiences</h2>
                 <div class="grid">
-                    <div class="card card-nowrap">
-                        <div class="card__image"><img src="assets/images/adidas.png" alt="adidas logo"></div>
-                        <div class="card__content">
+                    <div class="flex flex-nowrap">
+                        <div class="flex__image"><img src="assets/images/adidas.png" alt="adidas logo"></div>
+                        <div class="flex__content">
                             <h3>
                                 <span class="subtitle">Feb 2017 - Current</span>
                                 Front-end developer
@@ -133,9 +133,9 @@
                                 molestie.</p>
                         </div>
                     </div>
-                    <div class="card card-nowrap">
-                        <div class="card__image"><img src="assets/images/hm.png" alt="h&m logo"></div>
-                        <div class="card__content">
+                    <div class="flex flex-nowrap">
+                        <div class="flex__image"><img src="assets/images/hm.png" alt="h&m logo"></div>
+                        <div class="flex__content">
                             <h3>
                                 <span class="subtitle">Aug 2016 - Feb 2018</span>
                                 Full-stack developer
@@ -144,9 +144,9 @@
                                 molestie.</p>
                         </div>
                     </div>
-                    <div class="card card-nowrap">
-                        <div class="card__image"><img src="assets/images/nivea.png" alt="nivea logo"></div>
-                        <div class="card__content">
+                    <div class="flex flex-nowrap">
+                        <div class="flex__image"><img src="assets/images/nivea.png" alt="nivea logo"></div>
+                        <div class="flex__content">
                             <h3>
                                 <span class="subtitle">Jun 2015 - Aug 2016</span>
                                 Junior front-end developer
@@ -163,99 +163,99 @@
             <div class="grid__item">
                 <h2>Projects</h2>
                 <p>* These are only my devChallenges projects. For more, please check out <a href="https://github.com/je-jo">my github profile.</a></p>
-                <div class="card"><button class="btn btn--alt">HTML&CSS</button>
+                <div class="flex"><button class="btn btn--alt">HTML&CSS</button>
                     <button class="btn btn--alt">JavaScript</button>
                 </div>
 
             </div>
 
-            <div class="grid__item card">
-                <div class="card__image"><img src="assets/images/07-edie-homepage.png" alt="a screenshot of a homepage">
+            <div class="grid__item flex">
+                <div class="flex__image"><img src="assets/images/07-edie-homepage.png" alt="a screenshot of a homepage">
                 </div>
-                <div class="card__content">
+                <div class="flex__content">
                     <p>#JavaScript</p>
                     <h3>07. Edie Homepage</h3>
                     <p>A homepage with hamburger menu for mobile views and client form validation.</p>
-                    <div class="card card-nowrap"><a href="https://je-jo.github.io/edie-homepage/" class="btn"
+                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/edie-homepage/" class="btn"
                             target="_blank">Demo</a>
                         <a href="https://github.com/je-jo/edie-homepage" class="btn btn--alt" target="_blank">Code</a>
                     </div>
                 </div>
             </div>
-            <div class="grid__item card">
-                <div class="card__image"><img src="assets/images/06-checkout-page.png"
+            <div class="grid__item flex">
+                <div class="flex__image"><img src="assets/images/06-checkout-page.png"
                         alt="a screenshot of a checkout page"></div>
-                <div class="card__content">
+                <div class="flex__content">
                     <p>#JavaScript</p>
                     <h3>06. Checkout Page</h3>
                     <p>A checkout form with live calculations and client validation.</p>
-                    <div class="card card-nowrap"><a href="https://je-jo.github.io/checkout-page/" class="btn"
+                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/checkout-page/" class="btn"
                             target="_blank">Demo</a>
                         <a href="https://github.com/je-jo/checkout-page" class="btn btn--alt" target="_blank">Code</a>
                     </div>
                 </div>
             </div>
-            <div class="grid__item card">
-                <div class="card__image"><img src="assets/images/05-my-gallery.png"
+            <div class="grid__item flex">
+                <div class="flex__image"><img src="assets/images/05-my-gallery.png"
                         alt="a screenshot of a gallery page"></div>
-                <div class="card__content">
+                <div class="flex__content">
                     <p>#HTML&CSS only</p>
                     <h3>05. My Gallery</h3>
                     <p>This one is all about grid.</p>
                     <p>The pictures are clickable, and there's a nice hover effect.</p>
-                    <div class="card card-nowrap"><a href="https://je-jo.github.io/my-gallery/" class="btn"
+                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/my-gallery/" class="btn"
                             target="_blank">Demo</a>
                         <a href="https://github.com/je-jo/my-gallery" class="btn btn--alt" target="_blank">Code</a>
                     </div>
                 </div>
             </div>
-            <div class="grid__item card">
-                <div class="card__image"><img src="assets/images/04-recipe-page.png"
+            <div class="grid__item flex">
+                <div class="flex__image"><img src="assets/images/04-recipe-page.png"
                         alt="a screenshot of a recipe page"></div>
-                <div class="card__content">
+                <div class="flex__content">
                     <p>#HTML&CSS only</p>
                     <h3>04. Recipe Page</h3>
                     <p>Practiced CSS Grid and reusable code.</p>
-                    <div class="card card-nowrap"><a href="https://je-jo.github.io/recipe-page/" class="btn"
+                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/recipe-page/" class="btn"
                             target="_blank">Demo</a>
                         <a href="https://github.com/je-jo/recipe-page" class="btn btn--alt" target="_blank">Code</a>
                     </div>
                 </div>
             </div>
-            <div class="grid__item card">
-                <div class="card__image"><img src="assets/images/03-interior-consultant.png"
+            <div class="grid__item flex">
+                <div class="flex__image"><img src="assets/images/03-interior-consultant.png"
                         alt="a screenshot of a homepage"></div>
-                <div class="card__content">
+                <div class="flex__content">
                     <p>#JavaScript</p>
                     <h3>03. Interior Consultant</h3>
                     <p>First time building hamburger menu.</p>
-                    <div class="card card-nowrap"><a href="https://je-jo.github.io/interior-consultant/" class="btn"
+                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/interior-consultant/" class="btn"
                             target="_blank">Demo</a>
                         <a href="https://github.com/je-jo/interior-consultant" class="btn btn--alt"
                             target="_blank">Code</a>
                     </div>
                 </div>
             </div>
-            <div class="grid__item card">
-                <div class="card__image"><img src="assets/images/02-my-team-page.png" alt="a screenshot of a team page">
+            <div class="grid__item flex">
+                <div class="flex__image"><img src="assets/images/02-my-team-page.png" alt="a screenshot of a team page">
                 </div>
-                <div class="card__content">
+                <div class="flex__content">
                     <p>#HTML&CSS only</p>
                     <h3>02. My Team Page</h3>
                     <p>Practicing placement with this fun layout.</p>
-                    <div class="card card-nowrap"><a href="https://je-jo.github.io/my-team-page/" class="btn"
+                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/my-team-page/" class="btn"
                             target="_blank">Demo</a>
                         <a href="https://github.com/je-jo/my-team-page" class="btn btn--alt" target="_blank">Code</a>
                     </div>
                 </div>
             </div>
-            <div class="grid__item card">
-                <div class="card__image"><img src="assets/images/01-404.png" alt="a screenshot of a 404 page"></div>
-                <div class="card__content">
+            <div class="grid__item flex">
+                <div class="flex__image"><img src="assets/images/01-404.png" alt="a screenshot of a 404 page"></div>
+                <div class="flex__content">
                     <p>#HTML&CSS only</p>
                     <h3>01. 404 Page</h3>
                     <p>A simple starter project. First time converting actual Figma design to code.</p>
-                    <div class="card card-nowrap"><a href="https://je-jo.github.io/404-page/" class="btn"
+                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/404-page/" class="btn"
                             target="_blank">Demo</a>
                         <a href="https://github.com/je-jo/404-page" class="btn btn--alt" target="_blank">Code</a>
                     </div>
